Fix scrollbars.

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -21,10 +21,9 @@ main {
   top: -12%;
   left: 15%;
   color: #fafafa;
-  overflow: scroll;
-  // opacity: 0;
+  overflow-y: scroll;
+  overflow-x: hidden;
   pointer-events: auto;
-  transition: opacity 500ms linear;
   >h1 {
     text-align: center;
   }
@@ -38,13 +37,20 @@ main {
   .team {
     width: 50%;
   }
+  &::-webkit-scrollbar { 
+    display: none; 
+  }
+  -ms-overflow-style: none;  // IE 10+
+  overflow: -moz-scrollbars-none;  // Firefox
+  -ms-overflow-style: -ms-autohiding-scrollbar;
+  &:empty {
+    display: none;
+  }
 }
 
-
-
-// .active main {
-//   opacity: 1;
-// }
+.cell.logo main {
+  display: none;
+}
 
 nav {
   width: 100%;
